Src/parser.output
Terminals which are not used

   D_INCLUDE
   MOD
   ERROR


Grammar

    0 $accept: program $end

    1 program: linelist

    2 linelist: linelist line
    3         | line

    4 line: undefsym ':' D_DS defexpr linerest
    5     | D_DS defexpr linerest
    6     | undefsym ':' D_DBIT defexpr linerest
    7     | D_DBIT defexpr linerest
    8     | undefsym ':' linerest
    9     | linerest

   10 linerest: control '\n'
   11         | directive '\n'
   12         | conditional
   13         | SYMBOL '('
   14         | instr '\n'
   15         | '\n'
   16         | AB
   17         | A
   18         | C
   19         | PC
   20         | DPTR
   21         | R0
   22         | R1
   23         | R2
   24         | R3
   25         | R4
   26         | R5
   27         | R6
   28         | R7
   29         | AR0
   30         | AR1
   31         | AR2
   32         | AR3
   33         | AR4
   34         | AR5
   35         | AR6
   36         | AR7
   37         | error

   38 control: CONTROL

   39 directive: D_ORG defexpr
   40          | D_DSEG
   41          | D_DSEG D_AT defexpr
   42          | D_CSEG
   43          | D_CSEG D_AT defexpr
   44          | D_ISEG
   45          | D_ISEG D_AT defexpr
   46          | D_BSEG
   47          | D_BSEG D_AT defexpr
   48          | D_XSEG
   49          | D_XSEG D_AT defexpr
   50          | D_BYTE blist
   51          | D_WORD wlist
   52          | D_SKIP defexpr
   53          | undefsym D_EQU
   54          | undefsym D_MAC
   55          | USING data8
   56          | undefsym D_DATA data8
   57          | undefsym D_IDATA data8
   58          | undefsym D_XDATA data16
   59          | undefsym D_CODE data16
   60          | undefsym D_BIT bit
   61          | undefsym D_SET reg
   62          | undefsym D_SET areg
   63          | undefsym D_SET A
   64          | undefsym D_SET expr
   65          | undefsym D_SEG D_CODE
   66          | undefsym D_SEG D_XDATA
   67          | undefsym D_SEG D_XDATA OVERL
   68          | undefsym D_SEG D_DATA
   69          | undefsym D_SEG D_DATA OVERL
   70          | undefsym D_SEG D_IDATA
   71          | undefsym D_SEG D_IDATA OVERL
   72          | undefsym D_SEG D_BIT
   73          | undefsym D_SEG D_BIT OVERL
   74          | D_RSEG SYMBOL
   75          | PUBLIC publist
   76          | EXTERN D_CODE '(' extlist_code ')'
   77          | EXTERN D_DATA '(' extlist_data ')'
   78          | EXTERN D_XDATA '(' extlist_xdata ')'
   79          | EXTERN D_IDATA '(' extlist_idata ')'
   80          | EXTERN D_BIT '(' extlist_bit ')'

   81 conditional: IF data16
   82            | IFDEF
   83            | IFNDEF
   84            | ELSE
   85            | ENDIF
   86            | D_END

   87 defexpr: expr

   88 undefsym: SYMBOL

   89 publist: SYMBOL
   90        | publist ',' SYMBOL

   91 extlist_code: undefsym
   92             | undefsym ':' expr
   93             | extlist_code ',' undefsym
   94             | extlist_code ',' undefsym ':' expr

   95 extlist_bit: undefsym
   96            | undefsym ':' expr
   97            | extlist_bit ',' undefsym
   98            | extlist_bit ',' undefsym ':' expr

   99 extlist_data: undefsym
  100             | undefsym ':' expr
  101             | extlist_data ',' undefsym
  102             | extlist_data ',' undefsym ':' expr

  103 extlist_idata: undefsym
  104              | undefsym ':' expr
  105              | extlist_code ',' undefsym
  106              | extlist_code ',' undefsym ':' expr

  107 extlist_xdata: undefsym
  108              | undefsym ':' expr
  109              | extlist_code ',' undefsym
  110              | extlist_code ',' undefsym ':' expr

  111 blist: blist ',' data8
  112      | blist ',' STRING
  113      | data8
  114      | STRING

  115 wlist: wlist ',' data16
  116      | data16

  117 expr: '$'
  118     | '(' expr ')'
  119     | '-' expr
  120     | HIGH expr
  121     | LOW expr
  122     | NOT expr
  123     | '~' expr
  124     | expr '|' expr
  125     | expr OR expr
  126     | expr '&' expr
  127     | expr AND expr
  128     | expr '^' expr
  129     | expr XOR expr
  130     | expr '*' expr
  131     | expr '/' expr
  132     | expr '%' expr
  133     | expr '-' expr
  134     | expr '+' expr
  135     | expr '>' '>' expr
  136     | expr SHR expr
  137     | expr '<' '<' expr
  138     | expr SHL expr
  139     | expr '=' expr
  140     | expr C_EQ expr
  141     | expr '=' '=' expr
  142     | expr '!' '=' expr
  143     | expr '<' '>' expr
  144     | expr C_NE expr
  145     | expr '<' expr
  146     | expr C_LT expr
  147     | expr '<' '=' expr
  148     | expr C_LE expr
  149     | expr '>' expr
  150     | expr C_GT expr
  151     | expr '>' '=' expr
  152     | expr C_GE expr
  153     | SYMBOL
  154     | VALUE

  155 instr: NOP
  156      | ACALL addr11
  157      | AJMP addr11
  158      | ADD two_op1
  159      | ADDC two_op1
  160      | SUBB two_op1
  161      | XRL two_op1
  162      | XRL two_op2
  163      | ANL two_op1
  164      | ANL two_op2
  165      | ANL two_op3
  166      | ORL two_op1
  167      | ORL two_op2
  168      | ORL two_op3
  169      | XCH two_op1
  170      | INC single_op1
  171      | INC DPTR
  172      | DEC single_op1
  173      | DA A
  174      | DIV AB
  175      | JMP '@' A '+' DPTR
  176      | JMP '@' DPTR '+' A
  177      | JMP addr16
  178      | CALL addr16
  179      | MUL AB
  180      | RET
  181      | RETI
  182      | RL A
  183      | RLC A
  184      | RR A
  185      | RRC A
  186      | SWAP A
  187      | XCHD two_op1
  188      | CLR single_op2
  189      | CPL single_op2
  190      | SETB single_op2
  191      | PUSH data8
  192      | POP data8
  193      | LJMP addr16
  194      | LCALL addr16
  195      | JC relative
  196      | JNC relative
  197      | JNZ relative
  198      | JZ relative
  199      | SJMP relative
  200      | CJNE three_op1
  201      | JB two_op4
  202      | JNB two_op4
  203      | JBC two_op4
  204      | DJNZ two_op5
  205      | MOV two_op1
  206      | MOV two_op2
  207      | MOV two_op6
  208      | MOVC A ',' '@' A '+' DPTR
  209      | MOVC A ',' '@' DPTR '+' A
  210      | MOVC A ',' '@' A '+' PC
  211      | MOVC A ',' '@' PC '+' A
  212      | MOVX A ',' '@' regi
  213      | MOVX A ',' '@' DPTR
  214      | MOVX '@' regi ',' A
  215      | MOVX '@' DPTR ',' A

  216 two_op1: A ',' reg
  217        | A ',' data8
  218        | A ',' '@' regi
  219        | A ',' '#' data8

  220 two_op2: data8 ',' A
  221        | data8 ',' '#' data8

  222 two_op3: C ',' bit
  223        | C ',' '/' bit
  224        | C ',' '!' bit

  225 two_op4: bit ',' rel

  226 two_op5: reg ',' rel2
  227        | data8 ',' rel

  228 two_op6: reg ',' A
  229        | reg ',' data8
  230        | reg ',' '#' data8
  231        | data8 ',' reg
  232        | data8 ',' data8
  233        | data8 ',' '@' regi
  234        | '@' regi ',' A
  235        | '@' regi ',' data8
  236        | '@' regi ',' '#' data8
  237        | DPTR ',' '#' data16
  238        | C ',' bit
  239        | data8 ',' C
  240        | data8 BITPOS ',' C

  241 single_op1: A
  242           | reg
  243           | data8
  244           | '@' regi

  245 single_op2: A
  246           | C
  247           | bit

  248 three_op1: A ',' data8 ',' rel
  249          | A ',' '#' data8 ',' rel
  250          | reg ',' '#' data8 ',' rel
  251          | '@' regi ',' '#' data8 ',' rel

  252 rel: expr

  253 rel2: expr

  254 bit: expr BITPOS
  255    | expr

  256 reg: R0
  257    | R1
  258    | R2
  259    | R3
  260    | R4
  261    | R5
  262    | R6
  263    | R7

  264 areg: AR0
  265     | AR1
  266     | AR2
  267     | AR3
  268     | AR4
  269     | AR5
  270     | AR6
  271     | AR7

  272 regi: reg

  273 data8: expr
  274      | areg

  275 data16: expr
  276       | STRING

  277 addr11: expr

  278 addr16: expr

  279 relative: expr


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 10 11 14 15
'!' (33) 142 224
'#' (35) 219 221 230 236 237 249 250 251
'$' (36) 117
'%' (37) 132
'&' (38) 126
'(' (40) 13 76 77 78 79 80 118
')' (41) 76 77 78 79 80 118
'*' (42) 130
'+' (43) 134 175 176 208 209 210 211
',' (44) 90 93 94 97 98 101 102 105 106 109 110 111 112 115 208 209
    210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225
    226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 248
    249 250 251
'-' (45) 119 133
'/' (47) 131 223
':' (58) 4 6 8 92 94 96 98 100 102 104 106 108 110
'<' (60) 137 143 145 147
'=' (61) 139 141 142 147 151
'>' (62) 135 143 149 151
'@' (64) 175 176 208 209 210 211 212 213 214 215 218 233 234 235 236
    244 251
'^' (94) 128
'|' (124) 124
'~' (126) 123
error (256) 37
STRING (258) 112 114 276
D_ORG (259) 39
D_BYTE (260) 50
D_WORD (261) 51
D_SKIP (262) 52
D_EQU (263) 53
D_SET (264) 61 62 63 64
D_MAC (265) 54
D_DBIT (266) 6 7
D_END (267) 86
D_DSEG (268) 40 41
D_ISEG (269) 44 45
D_BSEG (270) 46 47
D_CSEG (271) 42 43
D_XSEG (272) 48 49
ACALL (273) 156
ADD (274) 158
ADDC (275) 159
AJMP (276) 157
ANL (277) 163 164 165
CALL (278) 178
CJNE (279) 200
CLR (280) 188
CPL (281) 189
DA (282) 173
DEC (283) 172
DIV (284) 174
DJNZ (285) 204
INC (286) 170 171
D_INCLUDE (287)
JB (288) 201
JBC (289) 203
JC (290) 195
JMP (291) 175 176 177
JNB (292) 202
JNC (293) 196
JNZ (294) 197
JZ (295) 198
LCALL (296) 194
LJMP (297) 193
MOV (298) 205 206 207
MOVC (299) 208 209 210 211
MOVX (300) 212 213 214 215
NOP (301) 155
MUL (302) 179
ORL (303) 166 167 168
POP (304) 192
PUSH (305) 191
RET (306) 180
RETI (307) 181
RL (308) 182
RLC (309) 183
RR (310) 184
RRC (311) 185
SETB (312) 190
SJMP (313) 199
SUBB (314) 160
SWAP (315) 186
XCH (316) 169
XCHD (317) 187
XRL (318) 161 162
AB (319) 16 174 179
A (320) 17 63 173 175 176 182 183 184 185 186 208 209 210 211 212 213
    214 215 216 217 218 219 220 228 234 241 245 248 249
C (321) 18 222 223 224 238 239 240 246
PC (322) 19 210 211
DPTR (323) 20 171 175 176 208 209 213 215 237
BITPOS (324) 240 254
R0 (325) 21 256
R1 (326) 22 257
R2 (327) 23 258
R3 (328) 24 259
R4 (329) 25 260
R5 (330) 26 261
R6 (331) 27 262
R7 (332) 28 263
USING (333) 55
AR0 (334) 29 264
AR1 (335) 30 265
AR2 (336) 31 266
AR3 (337) 32 267
AR4 (338) 33 268
AR5 (339) 34 269
AR6 (340) 35 270
AR7 (341) 36 271
VALUE (342) 154
SYMBOL (343) 13 74 88 89 90 153
CONTROL (344) 38
HIGH (345) 120
LOW (346) 121
NOT (347) 122
D_AT (348) 41 43 45 47 49
D_DS (349) 4 5
D_BIT (350) 60 72 73 80
D_DATA (351) 56 68 69 77
D_XDATA (352) 58 66 67 78
D_IDATA (353) 57 70 71 79
D_CODE (354) 59 65 76
MOD (355)
D_SEG (356) 65 66 67 68 69 70 71 72 73
D_RSEG (357) 74
PUBLIC (358) 75
EXTERN (359) 76 77 78 79 80
OVERL (360) 67 69 71 73
IF (361) 81
IFDEF (362) 82
IFNDEF (363) 83
ENDIF (364) 85
ELSE (365) 84
ERROR (366)
XOR (367) 129
AND (368) 127
OR (369) 125
SHL (370) 138
SHR (371) 136
C_NE (372) 144
C_EQ (373) 140
C_LE (374) 148
C_GE (375) 152
C_LT (376) 146
C_GT (377) 150


Nonterminals, with rules where they appear

$accept (144)
    on left: 0
program (145)
    on left: 1, on right: 0
linelist (146)
    on left: 2 3, on right: 1 2
line (147)
    on left: 4 5 6 7 8 9, on right: 2 3
linerest (148)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37, on right: 4 5 6 7 8 9
control (149)
    on left: 38, on right: 10
directive (150)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80, on right: 11
conditional (151)
    on left: 81 82 83 84 85 86, on right: 12
defexpr (152)
    on left: 87, on right: 4 5 6 7 39 41 43 45 47 49 52
undefsym (153)
    on left: 88, on right: 4 6 8 53 54 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110
publist (154)
    on left: 89 90, on right: 75 90
extlist_code (155)
    on left: 91 92 93 94, on right: 76 93 94 105 106 109 110
extlist_bit (156)
    on left: 95 96 97 98, on right: 80 97 98
extlist_data (157)
    on left: 99 100 101 102, on right: 77 101 102
extlist_idata (158)
    on left: 103 104 105 106, on right: 79
extlist_xdata (159)
    on left: 107 108 109 110, on right: 78
blist (160)
    on left: 111 112 113 114, on right: 50 111 112
wlist (161)
    on left: 115 116, on right: 51 115
expr (162)
    on left: 117 118 119 120 121 122 123 124 125 126 127 128 129 130
    131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146
    147 148 149 150 151 152 153 154, on right: 64 87 92 94 96 98 100
    102 104 106 108 110 118 119 120 121 122 123 124 125 126 127 128
    129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 252 253 254 255 273 275 277 278
    279
instr (163)
    on left: 155 156 157 158 159 160 161 162 163 164 165 166 167 168
    169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184
    185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200
    201 202 203 204 205 206 207 208 209 210 211 212 213 214 215,
    on right: 14
two_op1 (164)
    on left: 216 217 218 219, on right: 158 159 160 161 163 166 169
    187 205
two_op2 (165)
    on left: 220 221, on right: 162 164 167 206
two_op3 (166)
    on left: 222 223 224, on right: 165 168
two_op4 (167)
    on left: 225, on right: 201 202 203
two_op5 (168)
    on left: 226 227, on right: 204
two_op6 (169)
    on left: 228 229 230 231 232 233 234 235 236 237 238 239 240,
    on right: 207
single_op1 (170)
    on left: 241 242 243 244, on right: 170 172
single_op2 (171)
    on left: 245 246 247, on right: 188 189 190
three_op1 (172)
    on left: 248 249 250 251, on right: 200
rel (173)
    on left: 252, on right: 225 227 248 249 250 251
rel2 (174)
    on left: 253, on right: 226
bit (175)
    on left: 254 255, on right: 60 222 223 224 225 238 247
reg (176)
    on left: 256 257 258 259 260 261 262 263, on right: 61 216 226
    228 229 230 231 242 250 272
areg (177)
    on left: 264 265 266 267 268 269 270 271, on right: 62 274
regi (178)
    on left: 272, on right: 212 214 218 233 234 235 236 244 251
data8 (179)
    on left: 273 274, on right: 55 56 57 111 113 191 192 217 219 220
    221 227 229 230 231 232 233 235 236 239 240 243 248 249 250 251
data16 (180)
    on left: 275 276, on right: 58 59 81 115 116 237
addr11 (181)
    on left: 277, on right: 156 157
addr16 (182)
    on left: 278, on right: 177 178 193 194
relative (183)
    on left: 279, on right: 195 196 197 198 199


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    D_ORG    shift, and go to state 2
    D_BYTE   shift, and go to state 3
    D_WORD   shift, and go to state 4
    D_SKIP   shift, and go to state 5
    D_DBIT   shift, and go to state 6
    D_END    shift, and go to state 7
    D_DSEG   shift, and go to state 8
    D_ISEG   shift, and go to state 9
    D_BSEG   shift, and go to state 10
    D_CSEG   shift, and go to state 11
    D_XSEG   shift, and go to state 12
    ACALL    shift, and go to state 13
    ADD      shift, and go to state 14
    ADDC     shift, and go to state 15
    AJMP     shift, and go to state 16
    ANL      shift, and go to state 17
    CALL     shift, and go to state 18
    CJNE     shift, and go to state 19
    CLR      shift, and go to state 20
    CPL      shift, and go to state 21
    DA       shift, and go to state 22
    DEC      shift, and go to state 23
    DIV      shift, and go to state 24
    DJNZ     shift, and go to state 25
    INC      shift, and go to state 26
    JB       shift, and go to state 27
    JBC      shift, and go to state 28
    JC       shift, and go to state 29
    JMP      shift, and go to state 30
    JNB      shift, and go to state 31
    JNC      shift, and go to state 32
    JNZ      shift, and go to state 33
    JZ       shift, and go to state 34
    LCALL    shift, and go to state 35
    LJMP     shift, and go to state 36
    MOV      shift, and go to state 37
    MOVC     shift, and go to state 38
    MOVX     shift, and go to state 39
    NOP      shift, and go to state 40
    MUL      shift, and go to state 41
    ORL      shift, and go to state 42
    POP      shift, and go to state 43
    PUSH     shift, and go to state 44
    RET      shift, and go to state 45
    RETI     shift, and go to state 46
    RL       shift, and go to state 47
    RLC      shift, and go to state 48
    RR       shift, and go to state 49
    RRC      shift, and go to state 50
    SETB     shift, and go to state 51
    SJMP     shift, and go to state 52
    SUBB     shift, and go to state 53
    SWAP     shift, and go to state 54
    XCH      shift, and go to state 55
    XCHD     shift, and go to state 56
    XRL      shift, and go to state 57
    AB       shift, and go to state 58
    A        shift, and go to state 59
    C        shift, and go to state 60
    PC       shift, and go to state 61
    DPTR     shift, and go to state 62
    R0       shift, and go to state 63
    R1       shift, and go to state 64
    R2       shift, and go to state 65
    R3       shift, and go to state 66
    R4       shift, and go to state 67
    R5       shift, and go to state 68
    R6       shift, and go to state 69
    R7       shift, and go to state 70
    USING    shift, and go to state 71
    AR0      shift, and go to state 72
    AR1      shift, and go to state 73
    AR2      shift, and go to state 74
    AR3      shift, and go to state 75
    AR4      shift, and go to state 76
    AR5      shift, and go to state 77
    AR6      shift, and go to state 78
    AR7      shift, and go to state 79
    SYMBOL   shift, and go to state 80
    CONTROL  shift, and go to state 81
    D_DS     shift, and go to state 82
    D_RSEG   shift, and go to state 83
    PUBLIC   shift, and go to state 84
    EXTERN   shift, and go to state 85
    IF       shift, and go to state 86
    IFDEF    shift, and go to state 87
    IFNDEF   shift, and go to state 88
    ENDIF    shift, and go to state 89
    ELSE     shift, and go to state 90
    '\n'     shift, and go to state 91

    program      go to state 92
    linelist     go to state 93
    line         go to state 94
    linerest     go to state 95
    control      go to state 96
    directive    go to state 97
    conditional  go to state 98
    undefsym     go to state 99
    instr        go to state 100


state 1

   37 linerest: error .

    $default  reduce using rule 37 (linerest)


state 2

   39 directive: D_ORG . defexpr

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    defexpr  go to state 110
    expr     go to state 111


state 3

   50 directive: D_BYTE . blist

    STRING  shift, and go to state 112
    AR0     shift, and go to state 113
    AR1     shift, and go to state 114
    AR2     shift, and go to state 115
    AR3     shift, and go to state 116
    AR4     shift, and go to state 117
    AR5     shift, and go to state 118
    AR6     shift, and go to state 119
    AR7     shift, and go to state 120
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    blist  go to state 121
    expr   go to state 122
    areg   go to state 123
    data8  go to state 124


state 4

   51 directive: D_WORD . wlist

    STRING  shift, and go to state 125
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    wlist   go to state 126
    expr    go to state 127
    data16  go to state 128


state 5

   52 directive: D_SKIP . defexpr

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    defexpr  go to state 129
    expr     go to state 111


state 6

    7 line: D_DBIT . defexpr linerest

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    defexpr  go to state 130
    expr     go to state 111


state 7

   86 conditional: D_END .

    $default  reduce using rule 86 (conditional)


state 8

   40 directive: D_DSEG .
   41          | D_DSEG . D_AT defexpr

    D_AT  shift, and go to state 131

    $default  reduce using rule 40 (directive)


state 9

   44 directive: D_ISEG .
   45          | D_ISEG . D_AT defexpr

    D_AT  shift, and go to state 132

    $default  reduce using rule 44 (directive)


state 10

   46 directive: D_BSEG .
   47          | D_BSEG . D_AT defexpr

    D_AT  shift, and go to state 133

    $default  reduce using rule 46 (directive)


state 11

   42 directive: D_CSEG .
   43          | D_CSEG . D_AT defexpr

    D_AT  shift, and go to state 134

    $default  reduce using rule 42 (directive)


state 12

   48 directive: D_XSEG .
   49          | D_XSEG . D_AT defexpr

    D_AT  shift, and go to state 135

    $default  reduce using rule 48 (directive)


state 13

  156 instr: ACALL . addr11

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr    go to state 136
    addr11  go to state 137


state 14

  158 instr: ADD . two_op1

    A  shift, and go to state 138

    two_op1  go to state 139


state 15

  159 instr: ADDC . two_op1

    A  shift, and go to state 138

    two_op1  go to state 140


state 16

  157 instr: AJMP . addr11

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr    go to state 136
    addr11  go to state 141


state 17

  163 instr: ANL . two_op1
  164      | ANL . two_op2
  165      | ANL . two_op3

    A       shift, and go to state 138
    C       shift, and go to state 142
    AR0     shift, and go to state 113
    AR1     shift, and go to state 114
    AR2     shift, and go to state 115
    AR3     shift, and go to state 116
    AR4     shift, and go to state 117
    AR5     shift, and go to state 118
    AR6     shift, and go to state 119
    AR7     shift, and go to state 120
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr     go to state 122
    two_op1  go to state 143
    two_op2  go to state 144
    two_op3  go to state 145
    areg     go to state 123
    data8    go to state 146


state 18

  178 instr: CALL . addr16

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr    go to state 147
    addr16  go to state 148


state 19

  200 instr: CJNE . three_op1

    A    shift, and go to state 149
    R0   shift, and go to state 150
    R1   shift, and go to state 151
    R2   shift, and go to state 152
    R3   shift, and go to state 153
    R4   shift, and go to state 154
    R5   shift, and go to state 155
    R6   shift, and go to state 156
    R7   shift, and go to state 157
    '@'  shift, and go to state 158

    three_op1  go to state 159
    reg        go to state 160


state 20

  188 instr: CLR . single_op2

    A       shift, and go to state 161
    C       shift, and go to state 162
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr        go to state 163
    single_op2  go to state 164
    bit         go to state 165


state 21

  189 instr: CPL . single_op2

    A       shift, and go to state 161
    C       shift, and go to state 162
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr        go to state 163
    single_op2  go to state 166
    bit         go to state 165


state 22

  173 instr: DA . A

    A  shift, and go to state 167


state 23

  172 instr: DEC . single_op1

    A       shift, and go to state 168
    R0      shift, and go to state 150
    R1      shift, and go to state 151
    R2      shift, and go to state 152
    R3      shift, and go to state 153
    R4      shift, and go to state 154
    R5      shift, and go to state 155
    R6      shift, and go to state 156
    R7      shift, and go to state 157
    AR0     shift, and go to state 113
    AR1     shift, and go to state 114
    AR2     shift, and go to state 115
    AR3     shift, and go to state 116
    AR4     shift, and go to state 117
    AR5     shift, and go to state 118
    AR6     shift, and go to state 119
    AR7     shift, and go to state 120
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109
    '@'     shift, and go to state 169

    expr        go to state 122
    single_op1  go to state 170
    reg         go to state 171
    areg        go to state 123
    data8       go to state 172


state 24

  174 instr: DIV . AB

    AB  shift, and go to state 173


state 25

  204 instr: DJNZ . two_op5

    R0      shift, and go to state 150
    R1      shift, and go to state 151
    R2      shift, and go to state 152
    R3      shift, and go to state 153
    R4      shift, and go to state 154
    R5      shift, and go to state 155
    R6      shift, and go to state 156
    R7      shift, and go to state 157
    AR0     shift, and go to state 113
    AR1     shift, and go to state 114
    AR2     shift, and go to state 115
    AR3     shift, and go to state 116
    AR4     shift, and go to state 117
    AR5     shift, and go to state 118
    AR6     shift, and go to state 119
    AR7     shift, and go to state 120
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr     go to state 122
    two_op5  go to state 174
    reg      go to state 175
    areg     go to state 123
    data8    go to state 176


state 26

  170 instr: INC . single_op1
  171      | INC . DPTR

    A       shift, and go to state 168
    DPTR    shift, and go to state 177
    R0      shift, and go to state 150
    R1      shift, and go to state 151
    R2      shift, and go to state 152
    R3      shift, and go to state 153
    R4      shift, and go to state 154
    R5      shift, and go to state 155
    R6      shift, and go to state 156
    R7      shift, and go to state 157
    AR0     shift, and go to state 113
    AR1     shift, and go to state 114
    AR2     shift, and go to state 115
    AR3     shift, and go to state 116
    AR4     shift, and go to state 117
    AR5     shift, and go to state 118
    AR6     shift, and go to state 119
    AR7     shift, and go to state 120
    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109
    '@'     shift, and go to state 169

    expr        go to state 122
    single_op1  go to state 178
    reg         go to state 171
    areg        go to state 123
    data8       go to state 172


state 27

  201 instr: JB . two_op4

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr     go to state 163
    two_op4  go to state 179
    bit      go to state 180


state 28

  203 instr: JBC . two_op4

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr     go to state 163
    two_op4  go to state 181
    bit      go to state 180


state 29

  195 instr: JC . relative

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr      go to state 182
    relative  go to state 183


state 30

  175 instr: JMP . '@' A '+' DPTR
  176      | JMP . '@' DPTR '+' A
  177      | JMP . addr16

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109
    '@'     shift, and go to state 184

    expr    go to state 147
    addr16  go to state 185


state 31

  202 instr: JNB . two_op4

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr     go to state 163
    two_op4  go to state 186
    bit      go to state 180


state 32

  196 instr: JNC . relative

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr      go to state 182
    relative  go to state 187


state 33

  197 instr: JNZ . relative

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr      go to state 182
    relative  go to state 188


state 34

  198 instr: JZ . relative

    VALUE   shift, and go to state 101
    SYMBOL  shift, and go to state 102
    HIGH    shift, and go to state 103
    LOW     shift, and go to state 104
    NOT     shift, and go to state 105
    '-'     shift, and go to state 106
    '~'     shift, and go to state 107
    '('     shift, and go to state 108
    '$'     shift, and go to state 109

    expr      go to state 182
    relative  go to state 189


state 35

  194 instr: LCALL . addr16
